--- a/localization/uk.json
+++ b/localization/uk.json
@@ -1,3 +1,34 @@
 {
-
+  "form_prediction": {
+    "title": "Оцінка ризику раку легень",
+    "gender": "Стать",
+    "male": "Чоловічий",
+    "female": "Жіночий",
+    "age": "Вік",
+    "yes": "Так",
+    "no": "Ні",
+    "questions": {
+      "smoking": "Ви курите?",
+      "yellow_fingers": "Чи є у вас жовті пальці?",
+      "anxiety": "Чи відчуваєте ви час від часу тривогу?",
+      "peer_pressure": "Чи відчуваєте ви тиск зі сторони сім'ї, робочого колективу чи інших спільнот?",
+      "chronic_disease": "Чи маєте ви хронічні захворювання?",
+      "fatigue": "Ви відчуваєте сильну втому останнім часом?",
+      "allergy": "Чи маєте ви алергію?",
+      "wheezing": "Чи є під час глибокого дихання свистіння?",
+      "alcohol_consuming": "Чи вживаєте ви алкоголь?",
+      "coughing": "Ви маєте кашель?",
+      "shortness_of_breath": "Ви маєте задуху?",
+      "swallowing_difficulty": "Чи є у вас утруднене ковтання?",
+      "chest_pain": "Чи відчуваєте останнім часом біль у грудях?"
+    },
+    "submit": "Оцінити ризик",
+    "warning_unanswered": "Будь ласка, дайте відповідь на всі запитання, перш ніж продовжити.",
+    "results": {
+      "title": "Результат:",
+      "high": "Високий ризик: {risk}% ймовірності захворювання на рак легень.",
+      "medium": "Середній ризик: {risk}% ймовірності захворювання на рак легень.",
+      "low": "Низький ризик: {risk}% ймовірності захворювання на рак легень."
+    }
+  }
 }
