--- a/localization/uk.json
+++ b/localization/uk.json
@@ -30,5 +30,11 @@
       "medium": "Середній ризик: {risk}% ймовірності захворювання на рак легень.",
       "low": "Низький ризик: {risk}% ймовірності захворювання на рак легень."
     }
+  },
+  "pages": {
+    "home": "Головна",
+    "info": "Про рак легень",
+    "prediction": "Оцініть свій ризик",
+    "about": "Про нас"
   }
 }
