--- a/localization/uk.json
+++ b/localization/uk.json
@@ -36,5 +36,57 @@
     "info": "Про рак легень",
     "prediction": "Оцініть свій ризик",
     "about": "Про нас"
+  },
+  "info_page": {
+    "title": "Інформація про рак легень",
+    "intro": "Дізнайтесь більше про те, що таке рак легень, які його симптоми, причини та способи профілактики. Своєчасне виявлення рятує життя.",
+    "what_is_lung_cancer": {
+      "header": "Що таке рак легень?",
+      "content": "Рак легень — це злоякісна пухлина, яка розвивається в тканинах одного або обох легень. Найчастіше він виникає в клітинах, що вистилають дихальні шляхи, і є одним із найпоширеніших видів раку у світі."
+    },
+    "statistics": {
+      "header": "Статистика",
+      "content": "У 2022 році було зареєстровано близько 2,5 мільйона нових випадків раку легень, що становить 12,4% від усіх нових випадків раку. Рак легень є основною причиною смерті від онкологічних захворювань, спричиняючи приблизно 1,8 мільйона смертей щорічно (18,7% від усіх смертей від раку). У чоловіків рак легень є найпоширенішим видом раку, тоді як у жінок він займає друге місце після раку молочної залози."
+    },
+    "symptoms": {
+      "header": "Основні симптоми",
+      "content": "На ранніх стадіях рак легень може не проявлятися симптомами. Однак із прогресуванням захворювання можуть з'явитися постійний кашель, що не зникає або посилюється, кровохаркання або виділення мокротиння з кров'ю, біль у грудях, що посилюється при глибокому вдиху, кашлі або сміху, задишка та утруднене дихання, втрата апетиту та необґрунтована втрата ваги, втома та слабкість, охриплість голосу, часті інфекції дихальних шляхів, такі як бронхіт або пневмонія."
+    },
+    "causes_risk_factors": {
+      "header": "Причини та фактори ризику",
+      "content": "Куріння є основною причиною раку легень. У розвинених країнах до 90% випадків раку легень пов'язані з курінням. Ризик розвитку раку легень у курців у 20 разів вищий, ніж у некурців. Тривалий вплив канцерогенних речовин, таких як азбест, радон, бензол та інші промислові хімікати, збільшує ризик розвитку раку легень. Забруднення повітря, особливо дрібними твердими частинками (PM2.5), є значущим фактором ризику, особливо для некурців. Наявність родичів першого ступеня з діагнозом рак легень підвищує ризик захворювання. Ризик розвитку раку легень зростає з віком, особливо після 65 років."
+    },
+    "diagnosis": {
+      "header": "Діагностика",
+      "content": "Раннє виявлення раку легень значно підвищує шанси на успішне лікування. Основні методи діагностики включають рентгенографію грудної клітки, що допомагає виявити пухлини або аномалії в легенях; комп'ютерну томографію (КТ), яка дозволяє отримати детальні зображення легень і виявити навіть невеликі пухлини; бронхоскопію, яка використовується для огляду дихальних шляхів і взяття зразків тканин для біопсії; та позитронно-емісійну томографію (ПЕТ), яка допомагає визначити стадію раку та наявність метастазів."
+    },
+    "treatment": {
+      "header": "Лікування",
+      "content": "Вибір методів лікування залежить від типу, стадії раку та загального стану здоров'я пацієнта. Основні методи включають хірургічне втручання для видалення пухлини або частини легені; хіміотерапію, яка використовує лікарські препарати для знищення ракових клітин; променеву терапію, що використовує високі дози радіації для знищення ракових клітин; таргетну терапію, спрямовану на специфічні генетичні мутації в ракових клітинах; та імунотерапію, яка стимулює імунну систему для боротьби з раком."
+    },
+    "prevention": {
+      "header": "Профілактика",
+      "content": "Запобігання раку легень включає відмову від куріння як найефективніший спосіб знизити ризик; уникнення пасивного куріння для зменшення впливу тютюнового диму; захист від впливу шкідливих речовин за допомогою засобів індивідуального захисту на робочому місці; підтримку чистоти повітря шляхом використання очищувачів повітря та уникнення забруднених місць; та регулярні медичні огляди, особливо для осіб з підвищеним ризиком."
+    },
+    "conclusion": "Наш додаток допоможе вам оцінити ризик розвитку раку легень та визначити, чи варто звернутися до лікаря для подальших обстежень.",
+    "sources": [
+      {
+        "title": "ВООЗ: Рак легень",
+        "url": "https://www.who.int/ru/news-room/fact-sheets/detail/lung-cancer"
+      },
+      {
+        "title": "Національний інститут раку США (NCI): Рак легень",
+        "url": "https://www.cancer.gov/types/lung"
+      },
+      {
+        "title": "Вікіпедія: Рак легень",
+        "url": "https://uk.wikipedia.org/wiki/Рак_легень"
+      }
+    ],
+    "source_title": "Джерела"
+  },
+  "home_page": {
+    "title": "Ласкаво просимо до Lung Q",
+    "description": "Це простий і зручний інструмент, створений для того, щоб допомогти вам попередньо оцінити ризик розвитку захворювань легень. За допомогою короткої анкети, що охоплює основні симптоми, спосіб життя, наявність хронічних хвороб і шкідливих звичок, ви зможете отримати інформативну оцінку. Це не є медичним діагнозом, але результат може підказати, чи варто звернутися до лікаря для додаткового обстеження. Ваше здоров’я — у ваших руках!"
   }
 }
