--- a/localization/uk.json
+++ b/localization/uk.json
@@ -88,5 +88,9 @@
   "home_page": {
     "title": "Ласкаво просимо до Lung Q",
     "description": "Це простий і зручний інструмент, створений для того, щоб допомогти вам попередньо оцінити ризик розвитку захворювань легень. За допомогою короткої анкети, що охоплює основні симптоми, спосіб життя, наявність хронічних хвороб і шкідливих звичок, ви зможете отримати інформативну оцінку. Це не є медичним діагнозом, але результат може підказати, чи варто звернутися до лікаря для додаткового обстеження. Ваше здоров’я — у ваших руках!"
+  },
+  "about_page": {
+    "title": "Про розробника",
+    "description": "Цей додаток розроблений студентом Назаром-Олексієм Уманцівим у рамках проходження практики для Закарпатського центру екстреної медичної допомоги та медицини катастроф.  \nГоловна мета проєкту — створення зручного та інтуїтивно зрозумілого онлайн-інструменту, який дозволяє користувачам пройти попередню оцінку ризику раку легень.  \nЦей ресурс **не замінює консультацію лікаря**, але допомагає вчасно звернути увагу на можливі симптоми та при потребі — отримати професійну медичну допомогу."
   }
 }
