Added new text for results of prediction

--- a/localization/en.json
+++ b/localization/en.json
@@ -26,8 +26,8 @@
     "warning_unanswered": "Please answer all questions before proceeding.",
     "results": {
       "title": "Result:",
-      "high": "High risk: {risk}% probability of having lung cancer.",
-      "medium": "Medium risk: {risk}% probability of having lung cancer.",
+      "high": "High risk: {risk}% probability of having lung cancer. We insist on undergoing a medical examination by a doctor.",
+      "medium": "Medium risk: {risk}% probability of having lung cancer. It is recommended to undergo a medical examination by a doctor.",
       "low": "Low risk: {risk}% probability of having lung cancer."
     }
   },
