--- a/localization/uk.json
+++ b/localization/uk.json
@@ -26,8 +26,8 @@
     "warning_unanswered": "Будь ласка, дайте відповідь на всі запитання, перш ніж продовжити.",
     "results": {
       "title": "Результат:",
-      "high": "Високий ризик: {risk}% ймовірності захворювання на рак легень.",
-      "medium": "Середній ризик: {risk}% ймовірності захворювання на рак легень.",
+      "high": "Високий ризик: {risk}% ймовірності захворювання на рак легень. Наполягаємо пройти медичне обстеження у лікаря.",
+      "medium": "Середній ризик: {risk}% ймовірності захворювання на рак легень. Рекомендовано пройти медичне обстеження у лікаря.",
       "low": "Низький ризик: {risk}% ймовірності захворювання на рак легень."
     }
   },
