Added new source in Info page

--- a/localization/en.json
+++ b/localization/en.json
@@ -81,6 +81,10 @@
       {
         "title": "Wikipedia: Lung Cancer",
         "url": "https://en.wikipedia.org/wiki/Lung_cancer"
+      },
+      {
+        "title": "Public Health Center of Ukraine: What is important to know about lung cancer",
+        "url": "https://www.phc.org.ua/news/scho-vazhlivo-znati-pro-rak-legen"
       }
     ],
     "source_title": "Sources"
