--- a/localization/uk.json
+++ b/localization/uk.json
@@ -81,6 +81,10 @@
       {
         "title": "Вікіпедія: Рак легень",
         "url": "https://uk.wikipedia.org/wiki/Рак_легень"
+      },
+      {
+        "title": "Центр Громадського Здоров'я України: Що важливо знати про рак легень",
+        "url": "https://www.phc.org.ua/news/scho-vazhlivo-znati-pro-rak-legen"
       }
     ],
     "source_title": "Джерела"
