Updated Form Prediction Page name in sidebar

--- a/localization/en.json
+++ b/localization/en.json
@@ -34,7 +34,7 @@
   "pages": {
     "home": "Home",
     "info": "Info about Lung Cancer",
-    "prediction": "Predict your Lung risk!",
+    "prediction": "Predict your Cancer risk!",
     "about": "About us"
   },
   "info_page": {
