--- a/localization/uk.json
+++ b/localization/uk.json
@@ -34,7 +34,7 @@
   "pages": {
     "home": "Головна",
     "info": "Про рак легень",
-    "prediction": "Оцініть свій ризик",
+    "prediction": "Оцініть свій ризик раку!",
     "about": "Про нас"
   },
   "info_page": {
